syntax = "proto3";

import "models.proto";

package v2.mod_services;

option go_package = "github.com/getcouragenow/mod/mod-dummy/service/go/rpc/v2";

service DummyService {
  rpc ListAccounts(v2.mod_services.ListAccountsRequest) returns (v2.mod_services.ListAccountsResponse) {};
 
}
